@@ -8,6 +8,7 @@
 - added a small buffer check for uploading file data for most used file extensions
 - improved logger in `FILESTORAGE()`
 - fixed functionality of `res.nocache()` method in the `res.stream()` method
+- fixed `continuing` with QueryBuilder processing
 
 ========================
 0.0.63
